add investor info to accoun table
